--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,9 @@
 </head>
   <body style="width: 300px">
     <!--Open <a href="http://stackoverflow.com" target="_blank">this page</a> and then-->
-    <p>Downloads: <span id="downloads"><span></p>
-    <p>Views: <span id="views"><span></p>
-    <p>Likes: <span id="likes"><span></p>
+    <p>Open-Startups: <span id="open-startups"><span></p>
+    <p>Influencers Argentina: <span id="influencers"><span></p>
+    <p>Donarg: <span id="donarg"><span></p>
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </body>
